Fixed Search for community not showing subject and description

--- a/css/search/styles.less
+++ b/css/search/styles.less
@@ -35,11 +35,15 @@
 
 			div.sr-image-container {
 				background-color : @cn-white;
-				padding          : 0 5px;
+				padding          : 0 10px;
+
+				p {
+					color : @gray-dark;
+				}
 			}
 
 			div.sr-footer-details {
-				padding : 5px 5px;
+				padding : 5px 10px;
 			}
 		}
 	}
